# nlp_class_assignment

./: .gitignore  README.md  pyproject.toml
config/: parameters.yaml
data/dictionaries/: LM2018N.csv  LM2018P.csv
data/processed/: zacks_arguments_sentiment.csv
data/raw/: zacks_arguments.csv
src/: df_preprocessing.py  dict_preprocessing.py  lda_pipeline.py  lgb_tuner.py  lgbm_pipeline.py  main.py  sentiment_dict_approach.py  utils.py
